fix: info card spacing

--- a/style.css
+++ b/style.css
@@ -124,8 +124,9 @@ section.footer {
 .card {
     display: flex;
     flex-direction: column;
+    justify-content: space-evenly;
     align-items: center;
-    height: 200px;
+    height: 250px;
     width: 200px;
     margin: 1rem;
 }
